# codemap-share

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/agents/: code_mapper.py  doc_generator.py  onboarding_guide.py
backend/app/api/: health.py  progress_bus.py  routes.py
backend/app/models/: config.py  schemas.py
backend/app/orchestrator/: __init__.py  planner.py
backend/app/services/: analysis_store.py  repo_cloner.py
docs/: core_features.md
frontend/: next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/: page.tsx
frontend/src/components/: AgentDurationsPanel.tsx  BentoFeatures.tsx  CodeMapFooter.tsx  Footer.tsx  HeatmapChart.tsx  HistoryList.tsx  InteractiveDemo.tsx  Navbar.tsx  ProgressPanel.tsx  ProjectChatPanel.tsx  RepoInput.tsx  ReportViewer.tsx  SecurityBanner.tsx
frontend/src/components/hero/: AsciiScene.tsx  ascii-effect.ts
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  sanitize.ts  translations.ts
frontend/src/types/: contracts.ts
