[project]
name = "codemap-ai-backend"
version = "0.1.0"
description = "FastAPI backend mock scaffolding for CodeMap AI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "websockets>=11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
]
